--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,66 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+/* SOLUTION */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+}
+
+.header {
+  display: grid;
+  grid-column: 1 / 3; 
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.logo {
+  margin-right: auto;
+}
+
+.menu ul {
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  row-gap: 35px;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  grid-row: 2;
+  grid-column: 2 / -1;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.article .card {
+  height: 200px;
+}
+
+.card .title {
+  margin-bottom: 10px;
+}
+
+.footer {
+  grid-column: 1 / -1;
+}
